// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`URLSearchParams > crossSerialize > scoped > supports URLSearchParams 1`] = `"($R=>$R[0]=new URLSearchParams("hello=world&foo=bar"))($R["example"])"`;

exports[`URLSearchParams > crossSerialize > supports URLSearchParams 1`] = `"$R[0]=new URLSearchParams("hello=world&foo=bar")"`;

exports[`URLSearchParams > crossSerializeAsync > scoped > supports URLSearchParams 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=new URLSearchParams("hello=world&foo=bar")))($R["example"])"`;

exports[`URLSearchParams > crossSerializeAsync > supports URLSearchParams 1`] = `"$R[0]=Promise.resolve($R[1]=new URLSearchParams("hello=world&foo=bar"))"`;

exports[`URLSearchParams > crossSerializeStream > scoped > supports URLSearchParams 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`URLSearchParams > crossSerializeStream > scoped > supports URLSearchParams 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new URLSearchParams("hello=world&foo=bar")))($R["example"])"
`;

exports[`URLSearchParams > crossSerializeStream > supports URLSearchParams 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`URLSearchParams > crossSerializeStream > supports URLSearchParams 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new URLSearchParams("hello=world&foo=bar"))"
`;

exports[`URLSearchParams > serialize > supports URLSearchParams 1`] = `"new URLSearchParams("hello=world&foo=bar")"`;

exports[`URLSearchParams > serializeAsync > supports URLSearchParams 1`] = `"Promise.resolve(new URLSearchParams("hello=world&foo=bar"))"`;

exports[`URLSearchParams > toCrossJSONStream > supports URLSearchParams 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`URLSearchParams > toCrossJSONStream > supports URLSearchParams 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":25,"i":3,"s":{"t":1,"s":"hello=world&foo=bar"},"c":"seroval-plugins/web/URLSearchParams"}]}"`;

exports[`URLSearchParams > toJSON > supports URLSearchParams 1`] = `"{"t":{"t":25,"i":0,"s":{"t":1,"s":"hello=world&foo=bar"},"c":"seroval-plugins/web/URLSearchParams"},"f":31,"m":[]}"`;

exports[`URLSearchParams > toJSON > supports URLSearchParams 2`] = `"{"t":25,"i":0,"s":{"t":1,"s":"hello=world&foo=bar"},"c":"seroval-plugins/web/URLSearchParams"}"`;

exports[`URLSearchParams > toJSONAsync > supports URLSearchParams 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"t":1,"s":"hello=world&foo=bar"},"c":"seroval-plugins/web/URLSearchParams"}},"f":31,"m":[]}"`;

exports[`URLSearchParams > toJSONAsync > supports URLSearchParams 2`] = `"{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"t":1,"s":"hello=world&foo=bar"},"c":"seroval-plugins/web/URLSearchParams"}}"`;
